Tab status bar flickering on hover fix

--- a/chrome/userChrome.css
+++ b/chrome/userChrome.css
@@ -959,6 +959,7 @@ spacer[part="overflow-end-indicator"]
 .tab-secondary-label
 {
     -moz-box-ordinal-group: 0 !important;
+    height: 16px !important;
     line-height: 16px !important;
     margin-block: 2px -6px !important;
 }
